2008-04-19  Torsten Rahn  <rahn@kde.org>

    Now everything has been ported to emulate the old
    behaviour. Only the dgml-maps are missing.
    For the full port to DGML we need to add the 
    Layermanagement class now ...

    Switch the four DGML2 defines to 1 to see the
    (not that visible) difference.

    * src/ControlView.cpp:
    * src/lib/MapThemeManager.cpp:
    * src/lib/MarbleControlBox.{cpp,h}:

    - Make the MarbleControlBox work with DGML2

2008-04-19  Patrick Spendrin    <ps_ml@gmx.de>

    * AbstractScanlineTextureMapper.cpp  
    * CMakeLists.txt  
    * MergedLayerDecorator.cpp  
    * TextureTile.cpp  
    * TextureTile.h  
    * TileCreator.cpp  
    * TileLoader.cpp  
    * TileLoader.h  
    * TileLoaderHelper.cpp  
    * global.h  

    - use TileLoaderHelper helper functions now 
    - move the TileDigits constant to global.h

2008-04-19  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/TileLoaderHelper.h
    * src/lib/TileLoaderHelper.cpp
    
    Move some tile independent functions out of TileLoader so they 
    can be used from TileLoader and TileCreator
    
2008-04-19  Inge Wallin  <inge@lysator.liu.se>

	* src/lib/MarbleModel.cpp: cleaning
	(destructor): delete m_mapTheme

2008-04-19  Torsten Rahn  <rahn@kde.org>

    * lib/MarbleWidget.cpp:
    * lib/AbstractScanlineTextureMapper.h:
    * lib/MergedLayerDecorator{cpp,h}:
    * lib/TextureTile.h:
    * lib/TileLoader{cpp,h}:
    * lib/MarbleModel{cpp,h}:
    * lib/CMakeLists.txt:
    * lib/MergedLayerPainter{cpp,h}:

    - Renaming MergedLayerPainter -> MergedLayerDecorator

2008-04-19  Torsten Rahn  <rahn@kde.org>

    * src/lib/AbstractScanlineTextureMapper.{cpp,h}:
    * src/lib/MarbleWidget.{cpp,h}:
    * src/lib/SunLocator{cpp,h}::
    * src/lib/TileLoader.h:
    * src/lib/MarbleMap.{cpp,h}:
    * src/lib/TextureTile.{cpp,h}:
    * src/lib/TileLoader.{cpp,h}:
    * src/lib/MarbleModel.{cpp,h}:
    * src/lib/MergedLayerPainter.{cpp,h}:

    Patch by David Roberts:
